troubleshooting/problem-1-networkpolicy-dns/diagnostics/05_networkpolicies_before_fix.yaml
#command:  kubectl get networkpolicy -o yaml

apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"frontend-network-policy","namespace":"default"},"spec":{"egress":[{"ports":[{"port":80,"protocol":"TCP"},{"port":443,"protocol":"TCP"}],"to":[{"ipBlock":{"cidr":"0.0.0.0/0"}}]}],"podSelector":{"matchLabels":{"app":"frontend"}},"policyTypes":["Egress"]}}
    creationTimestamp: "2025-11-16T08:25:54Z"
    generation: 1
    name: frontend-network-policy
    namespace: default
    resourceVersion: "10391"
    uid: e5fe4774-1204-40f8-8341-40392755dd08
  spec:
    egress:
    - ports:
      - port: 80
        protocol: TCP
      - port: 443
        protocol: TCP
      to:
      - ipBlock:
          cidr: 0.0.0.0/0
    podSelector:
      matchLabels:
        app: frontend
    policyTypes:
    - Egress
kind: List
metadata:
  resourceVersion: ""
